# rust-backend-starter

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  test-endpoints.sh
src/: main.rs
src/auth/: middleware.rs  mod.rs
src/db/: application_db.rs  job.rs  job_db.rs  mod.rs  user_db.rs
src/models/: application.rs  job.rs  mod.rs  user.rs
src/routes/: application.rs  application_route.rs  job.rs  job_route.rs  mod.rs  user.rs  user_route.rs
src/utils/: init_db.rs  mod.rs
